// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionList /> should render a section list with a titled section without props 1`] = `
.c3 {
  margin-right: auto;
  margin-left: auto;
  padding-right: 0rem;
  padding-left: 0rem;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: 0rem;
  margin-left: 0rem;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c7 {
  width: 100%;
}

@media only screen and (min-width:640px) {
  .c1 {
    border-bottom: 1px solid #E1E6EB;
  }

  .c1:last-child {
    border-bottom: 0;
  }
}

@media only screen and (min-width:640px) {
  .c0 {
    margin-left: 24px;
    margin-right: 24px;
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (min-width:640px) {
  .c2 {
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }
}

@media only screen and (max-width:639px) {
  .c2 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    padding: 24px 16px 12px;
  }
}

@media only screen and (max-width:639px) {
  .c5 {
    padding-bottom: 12px;
  }
}

@media only screen and (min-width:640px) {
  .c5 {
    margin-right: 24px;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media only screen and (min-width:640px) {
  .c6 {
    text-align: right;
  }
}

@media only screen and (min-width:640px) {
  .c7 {
    padding-top: 1.5rem;
  }
}

@media only screen and (max-width:639px) {
  .c7 {
    background-color: #FAFBFC;
    border-top: 1px solid #E1E6EB;
    border-bottom: 1px solid #E1E6EB;
    padding: 24px 16px;
  }
}

<SectionList>
  <div>
    <TitledSection>
      <Styled(styled.div)>
        <styled.div
          className="c0"
        >
          <div
            className="c0 c1"
          >
            <Styled(Row)>
              <Row
                className="c2"
              >
                <GridProvider>
                  <ThemeProvider
                    theme={
                      Object {
                        "flexboxgrid": Object {
                          "breakpoints": Object {
                            "lg": 64.625,
                            "md": 40,
                            "sm": 0,
                            "xs": -1,
                          },
                          "gridSize": 12,
                          "gutterWidth": 0,
                          "outerMargin": 0,
                        },
                      }
                    }
                  >
                    <Grid
                      fluid={true}
                    >
                      <div
                        className="c3"
                      >
                        <Row
                          className="c2"
                        >
                          <div
                            className="c2 c4"
                          >
                            <Styled(SectionDescription)>
                              <SectionDescription
                                className="c5"
                              >
                                <div
                                  className="c5"
                                />
                              </SectionDescription>
                            </Styled(SectionDescription)>
                            <styled.div>
                              <div
                                className="c6"
                              />
                            </styled.div>
                          </div>
                        </Row>
                      </div>
                    </Grid>
                  </ThemeProvider>
                </GridProvider>
              </Row>
            </Styled(Row)>
            <Row>
              <GridProvider>
                <ThemeProvider
                  theme={
                    Object {
                      "flexboxgrid": Object {
                        "breakpoints": Object {
                          "lg": 64.625,
                          "md": 40,
                          "sm": 0,
                          "xs": -1,
                        },
                        "gridSize": 12,
                        "gutterWidth": 0,
                        "outerMargin": 0,
                      },
                    }
                  }
                >
                  <Grid
                    fluid={true}
                  >
                    <div
                      className="c3"
                    >
                      <Row>
                        <div
                          className="c4"
                        >
                          <StyledTitledSectionBody>
                            <div
                              className="c7"
                            >
                              section 1
                            </div>
                          </StyledTitledSectionBody>
                        </div>
                      </Row>
                    </div>
                  </Grid>
                </ThemeProvider>
              </GridProvider>
            </Row>
          </div>
        </styled.div>
      </Styled(styled.div)>
    </TitledSection>
  </div>
</SectionList>
`;

exports[`<SectionList /> should render a section list with an annotated section without props 1`] = `
@media only screen and (min-width:640px) {
  .c1 {
    border-bottom: 1px solid #E1E6EB;
  }

  .c1:last-child {
    border-bottom: 0;
  }
}

@media only screen and (max-width:639px) {
  .c0 {
    padding: 24px 16px;
  }
}

@media only screen and (min-width:640px) {
  .c0 {
    margin-left: 24px;
    margin-right: 24px;
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (min-width:640px) {
  .c4 {
    margin-left: 24px;
  }
}

@media only screen and (max-width:639px) {
  .c4 {
    background-color: #FAFBFC;
    border-top: 1px solid #E1E6EB;
    border-bottom: 1px solid #E1E6EB;
    padding: 24px 16px;
  }
}

@media only screen and (max-width:639px) {
  .c3 {
    padding: 24px 16px;
  }
}

@media only screen and (min-width:640px) {
  .c3 {
    margin-right: 24px;
  }
}

@media only screen and (min-width:640px) {
  .c2 {
    margin-left: 24px;
    margin-right: 24px;
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

<SectionList>
  <div>
    <Styled(styled.div)>
      <styled.div
        className="c0"
      >
        <div
          className="c0 c1"
        >
          section 1
        </div>
      </styled.div>
    </Styled(styled.div)>
    <AnnotatedSection>
      <Styled(styled.div)>
        <styled.div
          className="c2"
        >
          <div
            className="c2 c1"
          >
            <XYGrid
              gutterMarginX={false}
              gutterMarginY={false}
              gutterPaddingX={false}
              gutterPaddingY={false}
              vertical={false}
            >
              <div
                className="ihrGridX"
              >
                <Cell
                  size={
                    Object {
                      "desktop": 4,
                      "min": 12,
                      "tablet": 4,
                    }
                  }
                >
                  <div
                    className="ihrCell desktop-4 tablet-4 min-12"
                  >
                    <Styled(SectionDescription)>
                      <SectionDescription
                        className="c3"
                      >
                        <div
                          className="c3"
                        />
                      </SectionDescription>
                    </Styled(SectionDescription)>
                  </div>
                </Cell>
                <Cell
                  size={
                    Object {
                      "desktop": 8,
                      "min": 12,
                      "tablet": 8,
                    }
                  }
                >
                  <div
                    className="ihrCell desktop-8 tablet-8 min-12"
                  >
                    <StyledAnnotatedSectionBody>
                      <div
                        className="c4"
                      >
                        section 2
                      </div>
                    </StyledAnnotatedSectionBody>
                  </div>
                </Cell>
              </div>
            </XYGrid>
          </div>
        </styled.div>
      </Styled(styled.div)>
    </AnnotatedSection>
  </div>
</SectionList>
`;

exports[`<SectionList /> should render a sectionList 1`] = `
.c6 {
  -webkit-transition: color .25s ease-out;
  transition: color .25s ease-out;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c6,
.c6:link,
.c6:visited {
  color: #432DF3;
}

.c6:hover {
  color: #2512B3;
}

.c6:active {
  color: #0F0080;
}

.c10 {
  margin-right: auto;
  margin-left: auto;
  padding-right: 0rem;
  padding-left: 0rem;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: 0rem;
  margin-left: 0rem;
}

.c15 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c16 {
  width: 100%;
}

.c4 {
  font-size: 18px;
  line-height: 24px;
  -webkit-letter-spacing: -.02em;
  -moz-letter-spacing: -.02em;
  -ms-letter-spacing: -.02em;
  letter-spacing: -.02em;
  color: #424F5C;
  font-weight: 600;
}

.c5 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #667380;
  font-weight: 400;
  display: block;
}

.c13 {
  font-size: 18px;
  line-height: 24px;
  -webkit-letter-spacing: -.02em;
  -moz-letter-spacing: -.02em;
  -ms-letter-spacing: -.02em;
  letter-spacing: -.02em;
  color: #424F5C;
  font-weight: 600;
}

.c14 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #667380;
  font-weight: 400;
  display: block;
}

@media only screen and (min-width:640px) {
  .c1 {
    border-bottom: 1px solid #E1E6EB;
  }

  .c1:last-child {
    border-bottom: 0;
  }
}

@media only screen and (max-width:639px) {
  .c0 {
    padding: 24px 16px;
  }
}

@media only screen and (min-width:640px) {
  .c0 {
    margin-left: 24px;
    margin-right: 24px;
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (min-width:640px) {
  .c7 {
    margin-left: 24px;
  }
}

@media only screen and (max-width:639px) {
  .c7 {
    background-color: #FAFBFC;
    border-top: 1px solid #E1E6EB;
    border-bottom: 1px solid #E1E6EB;
    padding: 24px 16px;
  }
}

@media only screen and (max-width:639px) {
  .c3 {
    padding: 24px 16px;
  }
}

@media only screen and (min-width:640px) {
  .c3 {
    margin-right: 24px;
  }
}

@media only screen and (min-width:640px) {
  .c2 {
    margin-left: 24px;
    margin-right: 24px;
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (min-width:640px) {
  .c8 {
    margin-left: 24px;
    margin-right: 24px;
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (min-width:640px) {
  .c9 {
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }
}

@media only screen and (max-width:639px) {
  .c9 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    padding: 24px 16px 12px;
  }
}

@media only screen and (max-width:639px) {
  .c12 {
    padding-bottom: 12px;
  }
}

@media only screen and (min-width:640px) {
  .c12 {
    margin-right: 24px;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media only screen and (min-width:640px) {
  .c15 {
    text-align: right;
  }
}

@media only screen and (min-width:640px) {
  .c16 {
    padding-top: 1.5rem;
  }
}

@media only screen and (max-width:639px) {
  .c16 {
    background-color: #FAFBFC;
    border-top: 1px solid #E1E6EB;
    border-bottom: 1px solid #E1E6EB;
    padding: 24px 16px;
  }
}

<SectionList>
  <div>
    <Styled(styled.div)>
      <styled.div
        className="c0"
      >
        <div
          className="c0 c1"
        >
          section 1
        </div>
      </styled.div>
    </Styled(styled.div)>
    <AnnotatedSection
      description="Annotated Description"
      header="Annotated Section"
      linkProps={
        Object {
          "href": "#",
        }
      }
      linkText="Annotated Link"
    >
      <Styled(styled.div)>
        <styled.div
          className="c2"
        >
          <div
            className="c2 c1"
          >
            <XYGrid
              gutterMarginX={false}
              gutterMarginY={false}
              gutterPaddingX={false}
              gutterPaddingY={false}
              vertical={false}
            >
              <div
                className="ihrGridX"
              >
                <Cell
                  size={
                    Object {
                      "desktop": 4,
                      "min": 12,
                      "tablet": 4,
                    }
                  }
                >
                  <div
                    className="ihrCell desktop-4 tablet-4 min-12"
                  >
                    <Styled(SectionDescription)
                      description="Annotated Description"
                      header="Annotated Section"
                      linkProps={
                        Object {
                          "href": "#",
                        }
                      }
                      linkText="Annotated Link"
                    >
                      <SectionDescription
                        className="c3"
                        description="Annotated Description"
                        header="Annotated Section"
                        linkProps={
                          Object {
                            "href": "#",
                          }
                        }
                        linkText="Annotated Link"
                      >
                        <div
                          className="c3"
                        >
                          <Text
                            color="#424F5C"
                            isInline={true}
                            tag="h2"
                            type="heading"
                          >
                            <styled.h2
                              color="#424F5C"
                              isInline={true}
                              textType="heading"
                            >
                              <h2
                                className="c4"
                                color="#424F5C"
                              >
                                Annotated Section
                              </h2>
                            </styled.h2>
                          </Text>
                          <Text
                            color="#667380"
                            isInline={false}
                            tag="span"
                            type="small"
                          >
                            <styled.span
                              color="#667380"
                              isInline={false}
                              textType="small"
                            >
                              <span
                                className="c5"
                                color="#667380"
                              >
                                Annotated Description
                              </span>
                            </styled.span>
                          </Text>
                          <TextLink
                            href="#"
                            textType="small"
                          >
                            <Component
                              className="c6"
                              href="#"
                              textType="small"
                            >
                              <Anchor
                                className="c6"
                                href="#"
                              >
                                <a
                                  className="c6"
                                  href="#"
                                >
                                  Annotated Link
                                </a>
                              </Anchor>
                            </Component>
                          </TextLink>
                        </div>
                      </SectionDescription>
                    </Styled(SectionDescription)>
                  </div>
                </Cell>
                <Cell
                  size={
                    Object {
                      "desktop": 8,
                      "min": 12,
                      "tablet": 8,
                    }
                  }
                >
                  <div
                    className="ihrCell desktop-8 tablet-8 min-12"
                  >
                    <StyledAnnotatedSectionBody>
                      <div
                        className="c7"
                      >
                        section 2
                      </div>
                    </StyledAnnotatedSectionBody>
                  </div>
                </Cell>
              </div>
            </XYGrid>
          </div>
        </styled.div>
      </Styled(styled.div)>
    </AnnotatedSection>
    <TitledSection
      actionItems={
        Array [
          <Button
            iconAlignment="left"
            type="primary"
          >
            Action 1
          </Button>,
          <Button
            iconAlignment="left"
            type="primary"
          >
            Action 2
          </Button>,
        ]
      }
      description="Titled Description"
      header="Titled Section"
    >
      <Styled(styled.div)>
        <styled.div
          className="c8"
        >
          <div
            className="c8 c1"
          >
            <Styled(Row)>
              <Row
                className="c9"
              >
                <GridProvider>
                  <ThemeProvider
                    theme={
                      Object {
                        "flexboxgrid": Object {
                          "breakpoints": Object {
                            "lg": 64.625,
                            "md": 40,
                            "sm": 0,
                            "xs": -1,
                          },
                          "gridSize": 12,
                          "gutterWidth": 0,
                          "outerMargin": 0,
                        },
                      }
                    }
                  >
                    <Grid
                      fluid={true}
                    >
                      <div
                        className="c10"
                      >
                        <Row
                          className="c9"
                        >
                          <div
                            className="c9 c11"
                          >
                            <Styled(SectionDescription)
                              description="Titled Description"
                              header="Titled Section"
                            >
                              <SectionDescription
                                className="c12"
                                description="Titled Description"
                                header="Titled Section"
                              >
                                <div
                                  className="c12"
                                >
                                  <Text
                                    color="#424F5C"
                                    isInline={true}
                                    tag="h2"
                                    type="heading"
                                  >
                                    <styled.h2
                                      color="#424F5C"
                                      isInline={true}
                                      textType="heading"
                                    >
                                      <h2
                                        className="c13"
                                        color="#424F5C"
                                      >
                                        Titled Section
                                      </h2>
                                    </styled.h2>
                                  </Text>
                                  <Text
                                    color="#667380"
                                    isInline={false}
                                    tag="span"
                                    type="small"
                                  >
                                    <styled.span
                                      color="#667380"
                                      isInline={false}
                                      textType="small"
                                    >
                                      <span
                                        className="c14"
                                        color="#667380"
                                      >
                                        Titled Description
                                      </span>
                                    </styled.span>
                                  </Text>
                                </div>
                              </SectionDescription>
                            </Styled(SectionDescription)>
                            <styled.div>
                              <div
                                className="c15"
                              >
                                <Button
                                  iconAlignment="left"
                                  key="1"
                                  type="primary"
                                >
                                  <button
                                    className="button primary"
                                  >
                                    Action 1
                                  </button>
                                </Button>
                                <Button
                                  iconAlignment="left"
                                  key="2"
                                  type="primary"
                                >
                                  <button
                                    className="button primary"
                                  >
                                    Action 2
                                  </button>
                                </Button>
                              </div>
                            </styled.div>
                          </div>
                        </Row>
                      </div>
                    </Grid>
                  </ThemeProvider>
                </GridProvider>
              </Row>
            </Styled(Row)>
            <Row>
              <GridProvider>
                <ThemeProvider
                  theme={
                    Object {
                      "flexboxgrid": Object {
                        "breakpoints": Object {
                          "lg": 64.625,
                          "md": 40,
                          "sm": 0,
                          "xs": -1,
                        },
                        "gridSize": 12,
                        "gutterWidth": 0,
                        "outerMargin": 0,
                      },
                    }
                  }
                >
                  <Grid
                    fluid={true}
                  >
                    <div
                      className="c10"
                    >
                      <Row>
                        <div
                          className="c11"
                        >
                          <StyledTitledSectionBody>
                            <div
                              className="c16"
                            >
                              section 3
                            </div>
                          </StyledTitledSectionBody>
                        </div>
                      </Row>
                    </div>
                  </Grid>
                </ThemeProvider>
              </GridProvider>
            </Row>
          </div>
        </styled.div>
      </Styled(styled.div)>
    </TitledSection>
  </div>
</SectionList>
`;

exports[`<SectionList /> should render sectionList items with no children 1`] = `
.c6 {
  -webkit-transition: color .25s ease-out;
  transition: color .25s ease-out;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c6,
.c6:link,
.c6:visited {
  color: #432DF3;
}

.c6:hover {
  color: #2512B3;
}

.c6:active {
  color: #0F0080;
}

.c9 {
  margin-right: auto;
  margin-left: auto;
  padding-right: 0rem;
  padding-left: 0rem;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: 0rem;
  margin-left: 0rem;
}

.c14 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c4 {
  font-size: 18px;
  line-height: 24px;
  -webkit-letter-spacing: -.02em;
  -moz-letter-spacing: -.02em;
  -ms-letter-spacing: -.02em;
  letter-spacing: -.02em;
  color: #424F5C;
  font-weight: 600;
}

.c5 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #667380;
  font-weight: 400;
  display: block;
}

.c12 {
  font-size: 18px;
  line-height: 24px;
  -webkit-letter-spacing: -.02em;
  -moz-letter-spacing: -.02em;
  -ms-letter-spacing: -.02em;
  letter-spacing: -.02em;
  color: #424F5C;
  font-weight: 600;
}

.c13 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #667380;
  font-weight: 400;
  display: block;
}

@media only screen and (min-width:640px) {
  .c1 {
    border-bottom: 1px solid #E1E6EB;
  }

  .c1:last-child {
    border-bottom: 0;
  }
}

@media only screen and (max-width:639px) {
  .c0 {
    padding: 24px 16px;
  }
}

@media only screen and (min-width:640px) {
  .c0 {
    margin-left: 24px;
    margin-right: 24px;
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (max-width:639px) {
  .c3 {
    padding: 24px 16px;
  }
}

@media only screen and (min-width:640px) {
  .c3 {
    margin-right: 24px;
  }
}

@media only screen and (min-width:640px) {
  .c2 {
    margin-left: 24px;
    margin-right: 24px;
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (min-width:640px) {
  .c7 {
    margin-left: 24px;
    margin-right: 24px;
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (min-width:640px) {
  .c8 {
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }
}

@media only screen and (max-width:639px) {
  .c8 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    padding: 24px 16px 12px;
  }
}

@media only screen and (max-width:639px) {
  .c11 {
    padding-bottom: 12px;
  }
}

@media only screen and (min-width:640px) {
  .c11 {
    margin-right: 24px;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media only screen and (min-width:640px) {
  .c14 {
    text-align: right;
  }
}

<SectionList>
  <div>
    <Styled(styled.div)>
      <styled.div
        className="c0"
      >
        <div
          className="c0 c1"
        />
      </styled.div>
    </Styled(styled.div)>
    <AnnotatedSection
      description="Annotated Description"
      header="Annotated Section"
      linkProps={
        Object {
          "href": "#",
        }
      }
      linkText="Annotated Link"
    >
      <Styled(styled.div)>
        <styled.div
          className="c2"
        >
          <div
            className="c2 c1"
          >
            <XYGrid
              gutterMarginX={false}
              gutterMarginY={false}
              gutterPaddingX={false}
              gutterPaddingY={false}
              vertical={false}
            >
              <div
                className="ihrGridX"
              >
                <Cell
                  size={
                    Object {
                      "desktop": 4,
                      "min": 12,
                      "tablet": 4,
                    }
                  }
                >
                  <div
                    className="ihrCell desktop-4 tablet-4 min-12"
                  >
                    <Styled(SectionDescription)
                      description="Annotated Description"
                      header="Annotated Section"
                      linkProps={
                        Object {
                          "href": "#",
                        }
                      }
                      linkText="Annotated Link"
                    >
                      <SectionDescription
                        className="c3"
                        description="Annotated Description"
                        header="Annotated Section"
                        linkProps={
                          Object {
                            "href": "#",
                          }
                        }
                        linkText="Annotated Link"
                      >
                        <div
                          className="c3"
                        >
                          <Text
                            color="#424F5C"
                            isInline={true}
                            tag="h2"
                            type="heading"
                          >
                            <styled.h2
                              color="#424F5C"
                              isInline={true}
                              textType="heading"
                            >
                              <h2
                                className="c4"
                                color="#424F5C"
                              >
                                Annotated Section
                              </h2>
                            </styled.h2>
                          </Text>
                          <Text
                            color="#667380"
                            isInline={false}
                            tag="span"
                            type="small"
                          >
                            <styled.span
                              color="#667380"
                              isInline={false}
                              textType="small"
                            >
                              <span
                                className="c5"
                                color="#667380"
                              >
                                Annotated Description
                              </span>
                            </styled.span>
                          </Text>
                          <TextLink
                            href="#"
                            textType="small"
                          >
                            <Component
                              className="c6"
                              href="#"
                              textType="small"
                            >
                              <Anchor
                                className="c6"
                                href="#"
                              >
                                <a
                                  className="c6"
                                  href="#"
                                >
                                  Annotated Link
                                </a>
                              </Anchor>
                            </Component>
                          </TextLink>
                        </div>
                      </SectionDescription>
                    </Styled(SectionDescription)>
                  </div>
                </Cell>
              </div>
            </XYGrid>
          </div>
        </styled.div>
      </Styled(styled.div)>
    </AnnotatedSection>
    <TitledSection
      actionItems={
        Array [
          <Button
            iconAlignment="left"
            type="primary"
          >
            Action 1
          </Button>,
          <Button
            iconAlignment="left"
            type="primary"
          >
            Action 2
          </Button>,
        ]
      }
      description="Titled Description"
      header="Titled Section"
    >
      <Styled(styled.div)>
        <styled.div
          className="c7"
        >
          <div
            className="c7 c1"
          >
            <Styled(Row)>
              <Row
                className="c8"
              >
                <GridProvider>
                  <ThemeProvider
                    theme={
                      Object {
                        "flexboxgrid": Object {
                          "breakpoints": Object {
                            "lg": 64.625,
                            "md": 40,
                            "sm": 0,
                            "xs": -1,
                          },
                          "gridSize": 12,
                          "gutterWidth": 0,
                          "outerMargin": 0,
                        },
                      }
                    }
                  >
                    <Grid
                      fluid={true}
                    >
                      <div
                        className="c9"
                      >
                        <Row
                          className="c8"
                        >
                          <div
                            className="c8 c10"
                          >
                            <Styled(SectionDescription)
                              description="Titled Description"
                              header="Titled Section"
                            >
                              <SectionDescription
                                className="c11"
                                description="Titled Description"
                                header="Titled Section"
                              >
                                <div
                                  className="c11"
                                >
                                  <Text
                                    color="#424F5C"
                                    isInline={true}
                                    tag="h2"
                                    type="heading"
                                  >
                                    <styled.h2
                                      color="#424F5C"
                                      isInline={true}
                                      textType="heading"
                                    >
                                      <h2
                                        className="c12"
                                        color="#424F5C"
                                      >
                                        Titled Section
                                      </h2>
                                    </styled.h2>
                                  </Text>
                                  <Text
                                    color="#667380"
                                    isInline={false}
                                    tag="span"
                                    type="small"
                                  >
                                    <styled.span
                                      color="#667380"
                                      isInline={false}
                                      textType="small"
                                    >
                                      <span
                                        className="c13"
                                        color="#667380"
                                      >
                                        Titled Description
                                      </span>
                                    </styled.span>
                                  </Text>
                                </div>
                              </SectionDescription>
                            </Styled(SectionDescription)>
                            <styled.div>
                              <div
                                className="c14"
                              >
                                <Button
                                  iconAlignment="left"
                                  key="1"
                                  type="primary"
                                >
                                  <button
                                    className="button primary"
                                  >
                                    Action 1
                                  </button>
                                </Button>
                                <Button
                                  iconAlignment="left"
                                  key="2"
                                  type="primary"
                                >
                                  <button
                                    className="button primary"
                                  >
                                    Action 2
                                  </button>
                                </Button>
                              </div>
                            </styled.div>
                          </div>
                        </Row>
                      </div>
                    </Grid>
                  </ThemeProvider>
                </GridProvider>
              </Row>
            </Styled(Row)>
          </div>
        </styled.div>
      </Styled(styled.div)>
    </TitledSection>
  </div>
</SectionList>
`;
